src/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700&amp;family=Roboto:ital,wght@0,400;0,500;0,700&amp;display=swap"as="style"media="all"onload="this.onload=null;this.rel='stylesheet'");

:root {
  /* main colors */
  --color-primary: #800080;
  --color-secondary: #f8ac39;
  --color-tertiary: hwb(36 22% 3%);
  --color-dark: #2b282b;

  --color-trans-white: #fffdff;
  --color-trans-dark: #2b282b70;
  /* grayscale */
  --color-gray-01: #7b797b;
  --color-gray-02: #9b999b;
  --color-gray-03: #c0c0c0;
  --color-gray-04: #dbdbdb;
  --color-gray-05: #f0f0f0;

  /* lights */
  --color-prim-light-01: #fc64fc;
  --color-prim-light-02: #ffaaff;
  --color-prim-light-03: #fed5fe;

  --color-sec-light-01: #ffd088;
  --color-sec-light-02: #ffe9c8;
  --color-sec-light-03: #fff5e7;

  /* whites */
  --color-white-01: #fef2fe;
  --color-white-02: #fffdff;
  --color-white-03: #fdf9f2;

  --color-text: #2b282b;
  --color-background: #fffdff;
  --color-border: #2b282b;
  --color-link: #f8ac39;
  --color-link-hover: #800080;
  --color-link-visited: #f8ac39;
  --color-link-active: #ff00ff;
  --color-link-focus: #ffff00;
  --color-link-disabled: #2b282b;
  --color-link-text: #fffdff;
  --color-link-text-hover: #2b282b;
  --color-link-text-visited: #fffdff;
  --color-link-text-active: #f8ac39;
  --color-link-text-focus: #800080;
  --color-link-text-disabled: #f8ac39;
  --color-link-background: #ff00ff;
  --color-link-background-hover: #f8ac39;
  --color-link-background-visited: #f8ac39;
  --color-link-background-active: #ff00ff;
  --color-link-background-focus: #00ffff;
  --color-link-background-disabled: #800080;
  --color-link-border: #f8ac39;
  --color-link-border-hover: #f8ac39;
  --color-link-border-visited: #ff00ff;
  --color-link-border-active: #00ffff;
  --color-link-border-focus: #800080;
  --color-link-border-disabled: #f8ac39;
  --color-link-shadow: #f8ac39;
  --color-link-shadow-hover: #ff00ff;
  --color-link-shadow-visited: #00ffff;
  --color-link-shadow-active: #ffff00;
  --color-link-shadow-focus: #2b282b;
  --color-link-shadow-disabled: #fffdff;
  --color-link-text-shadow: #2b282b;
  --color-link-text-shadow-hover: #fffdff;
  --color-link-text-shadow-visited: #2b282b;
  --color-link-text-shadow-active: #fffdff;
  --color-link-text-shadow-focus: #2b282b;
  --color-link-text-shadow-disabled: #fffdff;
  --color-link-background-shadow: #fffdff;
  --color-link-background-shadow-hover: #2b282b;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
  height: 100vh;
}

.icon-w-15 {
  width: 15px;
  height: max-content;
  margin: 0.1rem;
}

.bg-dark {
  background-color: var(--color-dark) !important;
}

.bg-prim {
  background-color: var(--color-primary);
}

p {
  margin-bottom: 0;
}

ul,
h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 0;
  margin: 0;
}

#root {
  display: flex;
  height: 100%;
  flex-direction: column;
}

main {
  flex: 1;
}

.primary-underline {
  position: relative;
}

.primary-underline::after {
  content: "";
  position: absolute;
  bottom: -1.2rem;
  left: 0;
  width: 3rem;
  height: 0.25rem;
  background: var(--color-primary);
}

